# myslice_calendar

./: .gitignore  Cargo.toml  README.md
src/: data.rs  fetch.rs  main.rs  utils.rs
