[package]
name = "myslice_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.0", default-features = false }
attohttpc = "0.18.0"
chrono = "0.4.19"
chrono-tz = "0.5.3"
dotenv = "0.15.0"
icalendar = "0.10.0"
mod_use = "0.2.0"
scraper = "0.12.0"
